[Password Manager] Manual fallbacks don't set the |provisional_save_manager|

When showing the manual fallbacks, we create a PasswordFormManager
and pass it to the UI. Previously, this was done by creating a provisional
save manager and moving it, but if we failed to move it, it would remain and
signal that a submission in the previous navigation.

I've refactored the showing of the manual fallbacks to have no side effects
on |provisional_save_manager|.

Bug: 859156
Change-Id: Iaf41b201bc6c812f483fdb355f8414a77b0a034f
Reviewed-on: https://chromium-review.googlesource.com/1138322
Commit-Queue: Christos Froussios <cfroussios@chromium.org>
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576036}
Former-commit-id: eb26bb6df519a6420489ac2af91c7d562d4c3379